--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     h2{ font-size:20px; margin:0 0 20px; color:var(--person-text);
       font-weight:700; padding-bottom:12px; border-bottom:2px solid var(--person-border);}
     .work-content ul{ margin:0; padding-left:24px; }
-    .work-content li{ margin:12px 0; font-size:15px; line-height:1.7; }
+    .work-content li{ margin:12px 0; font-size:15px; line-height:1.7; padding:6px; border-radius:6px;}
+    .work-content li[contenteditable="true"]{background:#fffdf6; outline:1px dashed #cbd5e1;}
     .foot{ margin-top:20px; padding-top:16px; border-top:1px solid #e2e8f0; color:var(--muted); font-size:12px; text-align:center;}
     .toolbar{ display:flex; gap:8px; justify-content:flex-end; margin-bottom:12px; flex-wrap:wrap;}
     .toolbar button{
@@ -80,9 +81,9 @@
       <h2>📋 금일 업무 내용</h2>
       <div class="work-content">
         <ul id="todayList">
-          <li><b>기사 작성</b>: 중앙이코노미 70건, 투어코리아 1건</li>
-          <li><b>PressAI 개발</b>: 뉴스 재구성 대량 기사 생성기 동작 검증 및 수정</li>
-          <li><b>PressAI 개발</b>: 뉴스 재구성 페이지 기능 및 레이아웃 추가 작업 진행</li>
+          <li contenteditable="true"><b>기사 작성</b>: 중앙이코노미 70건, 투어코리아 1건</li>
+          <li contenteditable="true"><b>PressAI 개발</b>: 뉴스 재구성 대량 기사 생성기 동작 검증 및 수정</li>
+          <li contenteditable="true"><b>PressAI 개발</b>: 뉴스 재구성 페이지 기능 및 레이아웃 추가 작업 진행</li>
         </ul>
       </div>
     </div>
@@ -140,8 +141,28 @@
     arr.sort((a,b)=>new Date(a.dateISO)-new Date(b.dateISO));
     saveMonth(y,m,arr);
     renderMonth(y,m);
-    alert("금일 업무 저장 완료");
+    alert("💾 금일 업무가 저장되었습니다!");
   }
+
+  // Enter로 새 항목 추가 / 빈 줄에서 Backspace로 삭제
+  todayList.addEventListener('keydown', e=>{
+    if(e.key==='Enter'){
+      e.preventDefault();
+      const li=document.createElement('li');
+      li.contentEditable='true';
+      li.innerHTML='';
+      e.target.parentNode.insertBefore(li,e.target.nextSibling);
+      li.focus();
+    } else if(e.key==='Backspace'){
+      const li=e.target;
+      if(li.innerText.trim()===''){
+        e.preventDefault();
+        const prev=li.previousElementSibling;
+        li.remove();
+        if(prev) prev.focus();
+      }
+    }
+  });
 
   function renderTimeline(y){
     currentYearLabel.textContent = `${y}년`;
@@ -219,8 +240,6 @@
   saveTodayBtn.onclick=saveToday;
   exportBtn.onclick=exportData;
   importBtn.onclick=importData;
-
-  // 외부 접근을 위한 전역 등록
   window.renderMonth = renderMonth;
 })();
 
