--- a/index.html
+++ b/index.html
@@ -143,16 +143,17 @@
     </div>
 
     <div class="toolbar">
-      <button id="editBtn">✏️ 수정</button>
-      <button id="saveTodayBtn" disabled>💾 저장</button>
-      <button id="exportBtn">📤 내보내기</button>
-      <button id="importBtn">☁️ 불러오기</button>
+      <button id="saveTodayBtn">💾 금일 저장</button>
+      <button id="exportBtn">📤 데이터 내보내기</button>
+      <button id="importBtn">☁️ JSON 불러오기</button>
     </div>
 
     <div class="card" id="todayCard">
       <h2>📋 금일 업무 내용</h2>
       <div class="work-content">
-        <ul id="todayList"></ul>
+        <ul id="todayList">
+          <li contenteditable="true"></li>
+        </ul>
       </div>
     </div>
 
@@ -165,22 +166,21 @@
       <div id="monthSummary" class="month-summary">
         <p style="color:#64748b" id="noDataNotice">저장된 요약이 없습니다.</p>
       </div>
-      <div class="foot">* 데이터는 localStorage에 저장되며, JSON 내보내기 및 공유가 가능합니다.</div>
+      <div class="foot">* 데이터는 localStorage에 저장되며, JSON으로 내보내기 및 공유가 가능합니다.</div>
     </div>
   </div>
 
 <script>
 (function(){
   const headerDateEl = document.getElementById('headerDate');
-  const todayList = document.getElementById('todayList');
-  const editBtn = document.getElementById('editBtn');
   const saveTodayBtn = document.getElementById('saveTodayBtn');
   const exportBtn = document.getElementById('exportBtn');
   const importBtn = document.getElementById('importBtn');
+  const currentYearLabel = document.getElementById('currentYearLabel');
   const monthTimeline = document.getElementById('monthTimeline');
   const monthSummary = document.getElementById('monthSummary');
   const noDataNotice = document.getElementById('noDataNotice');
-  const currentYearLabel = document.getElementById('currentYearLabel');
+  const todayList = document.getElementById('todayList');
 
   let viewYear = new Date().getFullYear();
   let viewMonth = new Date().getMonth();
@@ -199,6 +199,39 @@
     return { dateISO: today.toISOString(), dateLabel: formatDateLabel(today), workHtml };
   }
 
+  function saveToday(){
+    const today = new Date();
+    const entry = collectTodayFromDOM();
+    const y=today.getFullYear(), m=today.getMonth();
+    const arr = loadMonth(y,m);
+    const key = today.toISOString().slice(0,10);
+    const idx = arr.findIndex(e=>e.dateISO.slice(0,10)===key);
+    if(idx>=0) arr[idx]=entry; else arr.push(entry);
+    arr.sort((a,b)=>new Date(a.dateISO)-new Date(b.dateISO));
+    saveMonth(y,m,arr);
+    renderMonth(y,m);
+    alert("💾 금일 업무가 저장되었습니다!");
+  }
+
+  todayList.addEventListener('keydown', e=>{
+    if(e.key==='Enter'){
+      e.preventDefault();
+      const li=document.createElement('li');
+      li.contentEditable='true';
+      li.innerHTML='';
+      e.target.parentNode.insertBefore(li,e.target.nextSibling);
+      li.focus();
+    } else if(e.key==='Backspace'){
+      const li=e.target;
+      if(li.innerText.trim()===''){
+        e.preventDefault();
+        const prev=li.previousElementSibling;
+        li.remove();
+        if(prev) prev.focus();
+      }
+    }
+  });
+
   function renderTimeline(y){
     currentYearLabel.textContent = `${y}년`;
     monthTimeline.innerHTML='';
@@ -207,8 +240,9 @@
       const btn=document.createElement('button');
       btn.textContent=`${m+1}월`;
       if(y===today.getFullYear() && m===today.getMonth()) btn.classList.add('current-month');
+      if(m===viewMonth && y===viewYear) btn.classList.add('viewed');
       if(loadMonth(y,m).length) btn.classList.add('has-data');
-      btn.onclick=()=>{viewMonth=m;renderMonth(y,m);};
+      btn.onclick=()=>{viewMonth=m;viewYear=y;renderMonth(y,m);};
       monthTimeline.appendChild(btn);
     }
   }
@@ -228,8 +262,8 @@
     Object.keys(groups).sort((a,b)=>a-b).forEach(wk=>{
       const block=document.createElement('div');
       block.className='week-block';
-      const h=document.createElement('h4'); h.textContent=`${m+1}월 ${wk}주차`;
-      block.appendChild(h);
+      const h=document.createElement('h4');
+      h.textContent=`${m+1}월 ${wk}주차`;block.appendChild(h);
       groups[wk].forEach(it=>{
         const wrap=document.createElement('div');
         wrap.style.cssText="margin-bottom:12px;padding:8px;border:1px solid #eef6ff;border-radius:6px;background:#fbfdff";
@@ -240,48 +274,17 @@
     });
   }
 
-  // 💾 저장
-  function saveToday(){
-    const today = new Date();
-    const entry = collectTodayFromDOM();
-    const y=today.getFullYear(), m=today.getMonth();
-    const arr = loadMonth(y,m);
-    const key = today.toISOString().slice(0,10);
-    const idx = arr.findIndex(e=>e.dateISO.slice(0,10)===key);
-    if(idx>=0) arr[idx]=entry; else arr.push(entry);
-    saveMonth(y,m,arr);
-    renderMonth(y,m);
-    toggleEditMode(false);
-    alert("💾 금일 업무 저장 완료!");
+  function exportData(){
+    const allKeys = Object.keys(localStorage).filter(k=>k.startsWith('reports_'));
+    const obj={};
+    allKeys.forEach(k=>obj[k]=JSON.parse(localStorage.getItem(k)));
+    const blob=new Blob([JSON.stringify(obj,null,2)],{type:"application/json"});
+    const a=document.createElement('a');
+    a.href=URL.createObjectURL(blob);
+    a.download="reports_data.json";
+    a.click();
   }
 
-  // ✏️ 수정 모드 토글
-  function toggleEditMode(enable){
-    Array.from(todayList.querySelectorAll('li')).forEach(li=>{
-      li.contentEditable = enable;
-      li.style.background = enable ? '#fffdf6' : 'transparent';
-    });
-    editBtn.disabled = enable;
-    saveTodayBtn.disabled = !enable;
-  }
-
-  // 🔹 오늘 데이터 자동 로드
-  function loadToday(){
-    const today = new Date();
-    const y = today.getFullYear(), m = today.getMonth();
-    const arr = loadMonth(y,m);
-    const key = today.toISOString().slice(0,10);
-    const found = arr.find(e=>e.dateISO.slice(0,10)===key);
-    if(found && found.workHtml){
-      todayList.innerHTML = found.workHtml;
-      toggleEditMode(false);
-    } else {
-      todayList.innerHTML = '<li>작성된 금일 업무가 없습니다.</li>';
-      toggleEditMode(false);
-    }
-  }
-
-  // ☁️ JSON 불러오기
   async function importData(){
     const fileInput=document.createElement('input');
     fileInput.type='file'; fileInput.accept='.json';
@@ -294,33 +297,48 @@
         Object.entries(obj).forEach(([k,v])=>localStorage.setItem(k,JSON.stringify(v)));
         alert('데이터 불러오기 완료!');
         renderMonth(viewYear,viewMonth);
-        loadToday(); // 즉시 반영
       }catch(e){alert('JSON 파일이 올바르지 않습니다.');}
     };
     fileInput.click();
   }
 
-  // 📤 JSON 내보내기
-  function exportData(){
-    const allKeys = Object.keys(localStorage).filter(k=>k.startsWith('reports_'));
-    const obj={};
-    allKeys.forEach(k=>obj[k]=JSON.parse(localStorage.getItem(k)));
-    const blob=new Blob([JSON.stringify(obj,null,2)],{type:"application/json"});
-    const a=document.createElement('a');
-    a.href=URL.createObjectURL(blob);
-    a.download="reports_data.json";
-    a.click();
-  }
-
-  // 초기화
   headerDateEl.textContent=formatDateLabel(new Date());
   renderMonth(viewYear,viewMonth);
-  loadToday();
-  editBtn.onclick=()=>toggleEditMode(true);
   saveTodayBtn.onclick=saveToday;
   exportBtn.onclick=exportData;
   importBtn.onclick=importData;
   window.renderMonth = renderMonth;
+
+  // ✅ 오늘 날짜의 데이터 자동 표시
+  (function loadTodayIfExists(){
+    const today = new Date();
+    const y = today.getFullYear(), m = today.getMonth();
+    const arr = JSON.parse(localStorage.getItem(`reports_${y}-${String(m+1).padStart(2,'0')}`) || '[]');
+    const key = today.toISOString().slice(0,10);
+    const found = arr.find(e => e.dateISO.slice(0,10) === key);
+    if(found && found.workHtml){
+      todayList.innerHTML = found.workHtml;
+      Array.from(todayList.querySelectorAll('li')).forEach(li => li.setAttribute('contenteditable','true'));
+      console.log('✅ 오늘 업무 자동 로드 완료');
+    }
+  })();
+})();
+
+// 🚀 GitHub Pages 자동 data.json 불러오기
+(async function loadSharedData(){
+  try {
+    const res = await fetch('data.json');
+    if (res.ok) {
+      const json = await res.json();
+      Object.entries(json).forEach(([k, v]) => localStorage.setItem(k, JSON.stringify(v)));
+      console.log('✅ data.json 로드 완료');
+      window.renderMonth?.(new Date().getFullYear(), new Date().getMonth());
+    } else {
+      console.warn('⚠️ data.json 파일이 없습니다.');
+    }
+  } catch (e) {
+    console.warn('⚠️ data.json 불러오기 실패:', e);
+  }
 })();
 </script>
 </body>
